ResizableBehavior & ResizablePanel - new component/behavior design sample

--- a/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/pages/resizable/DefaultResizablePage.html
+++ b/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/pages/resizable/DefaultResizablePage.html
@@ -12,16 +12,20 @@
 </head>
 <body>
 <wicket:extend>
-	<div id="resizable" class="ui-widget-content">
-		<h3 class="ui-widget-header">Resizable panel</h3>
-		<div>
-			Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam.
-			Integer ut neque. Vivamus nisi metus, molestie vel, gravida in,
-			condimentum sit amet, nunc. Nam a nibh. Donec suscipit eros.
-			Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum
-			a velit eu ante scelerisque vulputate.
+	<form wicket:id="form">
+		<div id="resizable" class="ui-widget-content">
+			<h3 class="ui-widget-header">Resizable panel</h3>
+			<div>
+				Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam.
+				Integer ut neque. Vivamus nisi metus, molestie vel, gravida in,
+				condimentum sit amet, nunc. Nam a nibh. Donec suscipit eros.
+				Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum
+				a velit eu ante scelerisque vulputate.
+			</div>
 		</div>
-	</div>
+		<br/><br/>
+		<button wicket:id="refresh">Refresh</button>
+	</form>
 </wicket:extend>
 </body>
 </html>
