--- a/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/pages/resizable/ResizablePanelPage.html
+++ b/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/pages/resizable/ResizablePanelPage.html
@@ -19,7 +19,11 @@
 <wicket:extend>
 	<div wicket:id="feedback"></div>
 	<br/>
-	<div wicket:id="resizable" class="resizable ui-corner-all"></div>
+	<form wicket:id="form">
+		<div wicket:id="resizable" class="resizable ui-corner-all"></div>
+		<br/><br/>
+		<button wicket:id="refresh">Refresh</button>
+	</form>
 </wicket:extend>
 </body>
 </html>
