Migration in progress...

--- a/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/pages/spinner/DefaultSpinnerPage.html
+++ b/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/pages/spinner/DefaultSpinnerPage.html
@@ -13,7 +13,7 @@
 			<br/>
 			<input wicket:id="submit" type="submit" value="Submit"></input>
 			<button wicket:id="button">Ajax Button</button>
-			<button wicket:id="toggle">Toggle visibility</button>
+			<button wicket:id="toggle">enable / disable</button>
 			<br/><br/>
 			<div wicket:id="feedback" style="width: 360px;"></div>
 		</form>
