Upgraded to jQuery UI 1.10.2

--- a/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/HomePage.html
+++ b/wicket-jquery-ui-samples/src/main/java/com/googlecode/wicket/jquery/ui/samples/HomePage.html
@@ -52,7 +52,7 @@
 &lt;dependency&gt;
     &lt;groupId&gt;com.googlecode.wicket-jquery-ui&lt;/groupId&gt;
     &lt;artifactId&gt;jquery-ui-core&lt;/artifactId&gt;
-    &lt;version&gt;1.4.1&lt;/version&gt; &lt;-- <i>or</i> &lt;version&gt;6.2.1&lt;/version&gt; --&gt;
+    &lt;version&gt;6.7.0&lt;/version&gt; &lt;-- <i>or</i> 1.5.10 --&gt;
 &lt;/dependency&gt;
                 </pre>
                 If the version you specified is 'snapshot', you might define this repository:
@@ -79,7 +79,7 @@
 &lt;!DOCTYPE html&gt;
 &lt;html xmlns:wicket="http://wicket.apache.org"&gt;
 &lt;head&gt;
-    &lt;link rel="stylesheet" type="text/css" href="css/<i>ui-lightness</i>/jquery-ui-1.10.1.custom.min.css" /&gt;
+    &lt;link rel="stylesheet" type="text/css" href="css/<i>ui-lightness</i>/jquery-ui-1.10.2.custom.min.css" /&gt;
 &lt;/head&gt;
 &lt;body&gt;
 &lt;/body&gt;
@@ -99,7 +99,7 @@
 &lt;head&gt;
 
     &lt;!-- jQuery UI --&gt;
-    &lt;link rel="stylesheet" type="text/css" href="css/<i>ui-lightness</i>/jquery-ui-1.10.1.custom.min.css" /&gt;
+    &lt;link rel="stylesheet" type="text/css" href="css/<i>ui-lightness</i>/jquery-ui-1.10.2.custom.min.css" /&gt;
     
     &lt;!-- Kendo UI --&gt;
     &lt;link rel="stylesheet" type="text/css" href="css/kendo/kendo.common.min.css" media="all" /&gt;
